--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
 			 <span class="fa-stack">
                             <a href="#your-link">
                                 <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-youtube-play fa-stack-1x"></i>
+                                <i class="fa fa-youtube-play"></i>
                             </a>
                         </span>
                         
@@ -512,7 +512,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Copyright © 2020 <a href="https://inovatik.com">Inovatik</a> - All rights reserved</p>
+                    <p class="p-small">Copyright © 2020 <a href="https://kippa21.github.io/Sync01/">Inovatik</a> - All rights reserved</p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
