--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
 			 <span class="fa-stack">
                             <a href="#your-link">
                                 <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fa-brands fa-youtube"></i>
+                                <i class="fa-brands fa-youtube fa-stack-1x"></i>
                             </a>
                         </span>
                         
